src/grammar/SimpleCParser.cpp

// Generated from src/grammar/SimpleC.g4 by ANTLR 4.7.1


#include "SimpleCListener.h"
#include "SimpleCVisitor.h"

#include "SimpleCParser.h"


using namespace antlrcpp;
using namespace antlr4;

SimpleCParser::SimpleCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SimpleCParser::~SimpleCParser() {
  delete _interpreter;
}

std::string SimpleCParser::getGrammarFileName() const {
  return "SimpleC.g4";
}

const std::vector<std::string>& SimpleCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SimpleCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- PrimaryExpressionContext ------------------------------------------------------------------

SimpleCParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCParser::PrimaryExpressionContext::Identifier() {
  return getToken(SimpleCParser::Identifier, 0);
}

tree::TerminalNode* SimpleCParser::PrimaryExpressionContext::Constant() {
  return getToken(SimpleCParser::Constant, 0);
}

std::vector<tree::TerminalNode *> SimpleCParser::PrimaryExpressionContext::StringLiteral() {
  return getTokens(SimpleCParser::StringLiteral);
}

tree::TerminalNode* SimpleCParser::PrimaryExpressionContext::StringLiteral(size_t i) {
  return getToken(SimpleCParser::StringLiteral, i);
}

SimpleCParser::ExpressionContext* SimpleCParser::PrimaryExpressionContext::expression() {
  return getRuleContext<SimpleCParser::ExpressionContext>(0);
}


size_t SimpleCParser::PrimaryExpressionContext::getRuleIndex() const {
  return SimpleCParser::RulePrimaryExpression;
}

void SimpleCParser::PrimaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimaryExpression(this);
}

void SimpleCParser::PrimaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimaryExpression(this);
}


antlrcpp::Any SimpleCParser::PrimaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCVisitor*>(visitor))
    return parserVisitor->visitPrimaryExpression(this);
  else
    return visitor->visitChildren(this);
}

SimpleCParser::PrimaryExpressionContext* SimpleCParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleCParser::RulePrimaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleCParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(96);
        match(SimpleCParser::Identifier);
        break;
      }

      case SimpleCParser::Constant: {
        enterOuterAlt(_localctx, 2);
        setState(97);
        match(SimpleCParser::Constant);
        break;
      }

      case SimpleCParser::StringLiteral: {
        enterOuterAlt(_localctx, 3);
        setState(99); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(98);
                  match(SimpleCParser::StringLiteral);
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(101); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

      case SimpleCParser::LeftParen: {
        enterOuterAlt(_localctx, 4);
        setState(103);
        match(SimpleCParser::LeftParen);
        setState(104);
        expression(0);
        setState(105);
        match(SimpleCParser::RightParen);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PostfixExpressionContext ------------------------------------------------------------------

SimpleCParser::PostfixExpressionContext::PostfixExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCParser::PrimaryExpressionContext* SimpleCParser::PostfixExpressionContext::primaryExpression() {
  return getRuleContext<SimpleCParser::PrimaryExpressionContext>(0);
}

SimpleCParser::PostfixExpressionContext* SimpleCParser::PostfixExpressionContext::postfixExpression() {
  return getRuleContext<SimpleCParser::PostfixExpressionContext>(0);
}

SimpleCParser::ArgumentExpressionListContext* SimpleCParser::PostfixExpressionContext::argumentExpressionList() {
  return getRuleContext<SimpleCParser::ArgumentExpressionListContext>(0);
}


size_t SimpleCParser::PostfixExpressionContext::getRuleIndex() const {
  return SimpleCParser::RulePostfixExpression;
}

void SimpleCParser::PostfixExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPostfixExpression(this);
}

void SimpleCParser::PostfixExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPostfixExpression(this);
}


antlrcpp::Any SimpleCParser::PostfixExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCVisitor*>(visitor))
    return parserVisitor->visitPostfixExpression(this);
  else
    return visitor->visitChildren(this);
}


SimpleCParser::PostfixExpressionContext* SimpleCParser::postfixExpression() {
   return postfixExpression(0);
}

SimpleCParser::PostfixExpressionContext* SimpleCParser::postfixExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SimpleCParser::PostfixExpressionContext *_localctx = _tracker.createInstance<PostfixExpressionContext>(_ctx, parentState);
  SimpleCParser::PostfixExpressionContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, SimpleCParser::RulePostfixExpression, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(110);
    primaryExpression();
    _ctx->stop = _input->LT(-1);
    setState(124);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(122);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(112);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(113);
          match(SimpleCParser::LeftParen);
          setState(115);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if ((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << SimpleCParser::LeftParen)
            | (1ULL << SimpleCParser::PlusPlus)
            | (1ULL << SimpleCParser::MinusMinus)
            | (1ULL << SimpleCParser::Not)
            | (1ULL << SimpleCParser::Identifier)
            | (1ULL << SimpleCParser::Constant)
            | (1ULL << SimpleCParser::DigitSequence)
            | (1ULL << SimpleCParser::StringLiteral))) != 0)) {
            setState(114);
            argumentExpressionList(0);
          }
          setState(117);
          match(SimpleCParser::RightParen);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(118);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(119);
          match(SimpleCParser::PlusPlus);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(120);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(121);
          match(SimpleCParser::MinusMinus);
          break;
        }

        } 
      }
      setState(126);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ArgumentExpressionListContext ------------------------------------------------------------------

SimpleCParser::ArgumentExpressionListContext::ArgumentExpressionListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCParser::AssignmentExpressionContext* SimpleCParser::ArgumentExpressionListContext::assignmentExpression() {
  return getRuleContext<SimpleCParser::AssignmentExpressionContext>(0);
}

SimpleCParser::ArgumentExpressionListContext* SimpleCParser::ArgumentExpressionListContext::argumentExpressionList() {
  return getRuleContext<SimpleCParser::ArgumentExpressionListContext>(0);
}


size_t SimpleCParser::ArgumentExpressionListContext::getRuleIndex() const {
  return SimpleCParser::RuleArgumentExpressionList;
}

void SimpleCParser::ArgumentExpressionListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgumentExpressionList(this);
}

void SimpleCParser::ArgumentExpressionListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgumentExpressionList(this);
}


antlrcpp::Any SimpleCParser::ArgumentExpressionListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCVisitor*>(visitor))
    return parserVisitor->visitArgumentExpressionList(this);
  else
    return visitor->visitChildren(this);
}


SimpleCParser::ArgumentExpressionListContext* SimpleCParser::argumentExpressionList() {
   return argumentExpressionList(0);
}

SimpleCParser::ArgumentExpressionListContext* SimpleCParser::argumentExpressionList(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SimpleCParser::ArgumentExpressionListContext *_localctx = _tracker.createInstance<ArgumentExpressionListContext>(_ctx, parentState);
  SimpleCParser::ArgumentExpressionListContext *previousContext = _localctx;
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, SimpleCParser::RuleArgumentExpressionList, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(128);
    assignmentExpression();
    _ctx->stop = _input->LT(-1);
    setState(135);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ArgumentExpressionListContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleArgumentExpressionList);
        setState(130);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(131);
        match(SimpleCParser::Comma);
        setState(132);
        assignmentExpression(); 
      }
      setState(137);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- UnaryExpressionContext ------------------------------------------------------------------

SimpleCParser::UnaryExpressionContext::UnaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCParser::PostfixExpressionContext* SimpleCParser::UnaryExpressionContext::postfixExpression() {
  return getRuleContext<SimpleCParser::PostfixExpressionContext>(0);
}

SimpleCParser::UnaryExpressionContext* SimpleCParser::UnaryExpressionContext::unaryExpression() {
  return getRuleContext<SimpleCParser::UnaryExpressionContext>(0);
}


size_t SimpleCParser::UnaryExpressionContext::getRuleIndex() const {
  return SimpleCParser::RuleUnaryExpression;
}

void SimpleCParser::UnaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnaryExpression(this);
}

void SimpleCParser::UnaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnaryExpression(this);
}


antlrcpp::Any SimpleCParser::UnaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCVisitor*>(visitor))
    return parserVisitor->visitUnaryExpression(this);
  else
    return visitor->visitChildren(this);
}

SimpleCParser::UnaryExpressionContext* SimpleCParser::unaryExpression() {
  UnaryExpressionContext *_localctx = _tracker.createInstance<UnaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, SimpleCParser::RuleUnaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleCParser::LeftParen:
      case SimpleCParser::Identifier:
      case SimpleCParser::Constant:
      case SimpleCParser::StringLiteral: {
        enterOuterAlt(_localctx, 1);
        setState(138);
        postfixExpression(0);
        break;
      }

      case SimpleCParser::PlusPlus: {
        enterOuterAlt(_localctx, 2);
        setState(139);
        match(SimpleCParser::PlusPlus);
        setState(140);
        unaryExpression();
        break;
      }

      case SimpleCParser::MinusMinus: {
        enterOuterAlt(_localctx, 3);
        setState(141);
        match(SimpleCParser::MinusMinus);
        setState(142);
        unaryExpression();
        break;
      }

      case SimpleCParser::Not: {
        enterOuterAlt(_localctx, 4);
        setState(143);
        match(SimpleCParser::Not);
        setState(144);
        unaryExpression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleExpressionContext ------------------------------------------------------------------

SimpleCParser::SimpleExpressionContext::SimpleExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCParser::UnaryExpressionContext* SimpleCParser::SimpleExpressionContext::unaryExpression() {
  return getRuleContext<SimpleCParser::UnaryExpressionContext>(0);
}

tree::TerminalNode* SimpleCParser::SimpleExpressionContext::DigitSequence() {
  return getToken(SimpleCParser::DigitSequence, 0);
}


size_t SimpleCParser::SimpleExpressionContext::getRuleIndex() const {
  return SimpleCParser::RuleSimpleExpression;
}

void SimpleCParser::SimpleExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleExpression(this);
}

void SimpleCParser::SimpleExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleExpression(this);
}


antlrcpp::Any SimpleCParser::SimpleExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCVisitor*>(visitor))
    return parserVisitor->visitSimpleExpression(this);
  else
    return visitor->visitChildren(this);
}

SimpleCParser::SimpleExpressionContext* SimpleCParser::simpleExpression() {
  SimpleExpressionContext *_localctx = _tracker.createInstance<SimpleExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleCParser::RuleSimpleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(149);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleCParser::LeftParen:
      case SimpleCParser::PlusPlus:
      case SimpleCParser::MinusMinus:
      case SimpleCParser::Not:
      case SimpleCParser::Identifier:
      case SimpleCParser::Constant:
      case SimpleCParser::StringLiteral: {
        enterOuterAlt(_localctx, 1);
        setState(147);
        unaryExpression();
        break;
      }

      case SimpleCParser::DigitSequence: {
        enterOuterAlt(_localctx, 2);
        setState(148);
        match(SimpleCParser::DigitSequence);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultiplicativeExpressionContext ------------------------------------------------------------------

SimpleCParser::MultiplicativeExpressionContext::MultiplicativeExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCParser::SimpleExpressionContext* SimpleCParser::MultiplicativeExpressionContext::simpleExpression() {
  return getRuleContext<SimpleCParser::SimpleExpressionContext>(0);
}

SimpleCParser::MultiplicativeExpressionContext* SimpleCParser::MultiplicativeExpressionContext::multiplicativeExpression() {
  return getRuleContext<SimpleCParser::MultiplicativeExpressionContext>(0);
}


size_t SimpleCParser::MultiplicativeExpressionContext::getRuleIndex() const {
  return SimpleCParser::RuleMultiplicativeExpression;
}

void SimpleCParser::MultiplicativeExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMultiplicativeExpression(this);
}

void SimpleCParser::MultiplicativeExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMultiplicativeExpression(this);
}


antlrcpp::Any SimpleCParser::MultiplicativeExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCVisitor*>(visitor))
    return parserVisitor->visitMultiplicativeExpression(this);
  else
    return visitor->visitChildren(this);
}


SimpleCParser::MultiplicativeExpressionContext* SimpleCParser::multiplicativeExpression() {
   return multiplicativeExpression(0);
}

SimpleCParser::MultiplicativeExpressionContext* SimpleCParser::multiplicativeExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SimpleCParser::MultiplicativeExpressionContext *_localctx = _tracker.createInstance<MultiplicativeExpressionContext>(_ctx, parentState);
  SimpleCParser::MultiplicativeExpressionContext *previousContext = _localctx;
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, SimpleCParser::RuleMultiplicativeExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(152);
    simpleExpression();
    _ctx->stop = _input->LT(-1);
    setState(165);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(163);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<MultiplicativeExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleMultiplicativeExpression);
          setState(154);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(155);
          match(SimpleCParser::Star);
          setState(156);
          simpleExpression();
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<MultiplicativeExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleMultiplicativeExpression);
          setState(157);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(158);
          match(SimpleCParser::Div);
          setState(159);
          simpleExpression();
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<MultiplicativeExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleMultiplicativeExpression);
          setState(160);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(161);
          match(SimpleCParser::Mod);
          setState(162);
          simpleExpression();
          break;
        }

        } 
      }
      setState(167);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AdditiveExpressionContext ------------------------------------------------------------------

SimpleCParser::AdditiveExpressionContext::AdditiveExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCParser::MultiplicativeExpressionContext* SimpleCParser::AdditiveExpressionContext::multiplicativeExpression() {
  return getRuleContext<SimpleCParser::MultiplicativeExpressionContext>(0);
}

SimpleCParser::AdditiveExpressionContext* SimpleCParser::AdditiveExpressionContext::additiveExpression() {
  return getRuleContext<SimpleCParser::AdditiveExpressionContext>(0);
}


size_t SimpleCParser::AdditiveExpressionContext::getRuleIndex() const {
  return SimpleCParser::RuleAdditiveExpression;
}
